# GStreamer_NNStreamer_CodeTests

./: README.md  nnstreamer_ex1_movenet_tflite.py  nnstreamer_ex2_rtsp_movenet_tflite.py
gst_cam_ex1/: CMakeLists.txt  README.md
gst_cam_ex1/src/: main.cpp
gst_rtsp_show_save/: CMakeLists.txt  README.md
gst_rtsp_show_save/src/: main.cpp
movenet/: README.md  joints_colors.txt  keypoints.txt
